--- a/application.json
+++ b/application.json
@@ -9,7 +9,7 @@
   "evaluationVersion": 2,
   "pages": [
     {
-      "id": "Page1",
+      "id": "StudentFilter",
       "isDefault": true
     }
   ],
