--- a/application.json
+++ b/application.json
@@ -7,6 +7,7 @@
   "collapseInvisibleWidgets": true,
   "color": "#C7F3E3",
   "evaluationVersion": 2,
+  "icon": "bag",
   "pages": [
     {
       "id": "StudentFilter",
